[package]
name = "c-lab-tester"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
sha2 = "0.10.2"